--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -5131,9 +5131,9 @@
           "height": 175
         },
         "id": "hIfQ2rUJuKUX",
-        "outputId": "b5fa13fe-ca6d-4ee6-d09a-be33e24f89e2"
+        "outputId": "37e275ba-fea1-43d2-cc91-cdb6cf4f96f3"
       },
-      "execution_count": 185,
+      "execution_count": 215,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5147,7 +5147,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-0fa80dd8-5619-41b3-87c8-bcfa7188391a\">\n",
+              "  <div id=\"df-79aeebbe-2e25-4fae-b1d6-ba78d9c407ca\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5195,7 +5195,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0fa80dd8-5619-41b3-87c8-bcfa7188391a')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-79aeebbe-2e25-4fae-b1d6-ba78d9c407ca')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5246,12 +5246,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-0fa80dd8-5619-41b3-87c8-bcfa7188391a button.colab-df-convert');\n",
+              "          document.querySelector('#df-79aeebbe-2e25-4fae-b1d6-ba78d9c407ca button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-0fa80dd8-5619-41b3-87c8-bcfa7188391a');\n",
+              "          const element = document.querySelector('#df-79aeebbe-2e25-4fae-b1d6-ba78d9c407ca');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5280,7 +5280,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#\n",
+        "#Check Error Rate\n",
         "df_table = pd.DataFrame({\"y_test\":y_test,\"baseline_model\":y_pred_test_baseline, \"base_error(%)\":None,\"final_model\":y_pred_test_best, \"final_error(%)\":None})\n",
         "\n",
         "df_table[\"base_error(%)\"] = (abs(df_table[\"y_test\"] - df_table[\"baseline_model\"])/df_table[\"y_test\"])*100\n",
@@ -5294,24 +5294,24 @@
           "height": 206
         },
         "id": "cM-ipMJbu1Gj",
-        "outputId": "4449ccb9-7586-4662-be27-f84bebb85159"
+        "outputId": "b206e092-b4ac-418c-de0f-87edbca2521d"
       },
-      "execution_count": 198,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      y_test  baseline_model  base_error(%)  best_model  best_error(%)\n",
-              "2701   12495          9188.0           26.5     10074.5           19.4\n",
-              "5722   26499         29630.4           11.8     26330.8            0.6\n",
-              "8976   11698         18590.5           58.9     16687.0           42.6\n",
-              "9395   54994         27802.5           49.4     46254.4           15.9\n",
-              "7425    6998          6771.7            3.2      8793.4           25.7"
+              "      y_test  baseline_model  base_error(%)  final_model  final_error(%)\n",
+              "2701   12495          9188.0           26.5      10074.5            19.4\n",
+              "5722   26499         29630.4           11.8      26330.8             0.6\n",
+              "8976   11698         18590.5           58.9      16687.0            42.6\n",
+              "9395   54994         27802.5           49.4      46254.4            15.9\n",
+              "7425    6998          6771.7            3.2       8793.4            25.7"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-617635ec-20b7-475b-904f-b405dacdc8fa\">\n",
+              "  <div id=\"df-a16e646f-66dd-4d4c-b4e4-27215fb25006\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5334,8 +5334,8 @@
               "      <th>y_test</th>\n",
               "      <th>baseline_model</th>\n",
               "      <th>base_error(%)</th>\n",
-              "      <th>best_model</th>\n",
-              "      <th>best_error(%)</th>\n",
+              "      <th>final_model</th>\n",
+              "      <th>final_error(%)</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -5382,7 +5382,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-617635ec-20b7-475b-904f-b405dacdc8fa')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a16e646f-66dd-4d4c-b4e4-27215fb25006')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5433,12 +5433,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-617635ec-20b7-475b-904f-b405dacdc8fa button.colab-df-convert');\n",
+              "          document.querySelector('#df-a16e646f-66dd-4d4c-b4e4-27215fb25006 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-617635ec-20b7-475b-904f-b405dacdc8fa');\n",
+              "          const element = document.querySelector('#df-a16e646f-66dd-4d4c-b4e4-27215fb25006');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5461,7 +5461,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 198
+          "execution_count": 216
         }
       ]
     },
@@ -5469,38 +5469,52 @@
       "cell_type": "code",
       "source": [
         "#Comparision between baseline model and final model\n",
-        "df_analysis = pd.DataFrame({\"error(%)\":[1,5,10,20,30], \"baseline_model\":[0,0,0,0,0], \"final_model\":[0,0,0,0,0]})\n",
+        "df_analysis = pd.DataFrame({\"error(%)\":[1,5,10,20,30], \"baseline_model\":[1,2,3,4,5], \"final_model\":[0,0,0,0,0]})\n",
         "df_analysis.set_index(\"error(%)\", inplace = True)\n",
-        "# df_table[df_table[\"base_error(%)\"]<=5][\"base_error(%)\"].count()\n",
         "\n",
+        "total_size = len(df_table)\n",
+        "df_analysis.iloc[0,0] = (df_table[df_table[\"base_error(%)\"]<=1][\"base_error(%)\"].count())/total_size*100\n",
+        "df_analysis.iloc[0,1] = (df_table[df_table[\"final_error(%)\"]<=1][\"final_error(%)\"].count())/total_size*100\n",
+        "\n",
+        "df_analysis.iloc[1,0] = (df_table[(df_table[\"base_error(%)\"]>1)&(df_table[\"base_error(%)\"]<=5)][\"base_error(%)\"].count())/total_size*100\n",
+        "df_analysis.iloc[1,1] = (df_table[(df_table[\"final_error(%)\"]>1)&(df_table[\"final_error(%)\"]<=5)][\"final_error(%)\"].count())/total_size*100\n",
+        "\n",
+        "df_analysis.iloc[2,0] = (df_table[(df_table[\"base_error(%)\"]>5)&(df_table[\"base_error(%)\"]<=10)][\"base_error(%)\"].count())/total_size*100\n",
+        "df_analysis.iloc[2,1] = (df_table[(df_table[\"final_error(%)\"]>5)&(df_table[\"final_error(%)\"]<=10)][\"final_error(%)\"].count())/total_size*100\n",
+        "\n",
+        "df_analysis.iloc[3,0] = (df_table[(df_table[\"base_error(%)\"]>10)&(df_table[\"base_error(%)\"]<=20)][\"base_error(%)\"].count())/total_size*100\n",
+        "df_analysis.iloc[3,1] = (df_table[(df_table[\"final_error(%)\"]>10)&(df_table[\"final_error(%)\"]<=20)][\"final_error(%)\"].count())/total_size*100\n",
+        "\n",
+        "df_analysis.iloc[4,0] = (df_table[(df_table[\"base_error(%)\"]>20)&(df_table[\"base_error(%)\"]<=30)][\"base_error(%)\"].count())/total_size*100\n",
+        "df_analysis.iloc[4,1] = (df_table[(df_table[\"final_error(%)\"]>20)&(df_table[\"final_error(%)\"]<=30)][\"final_error(%)\"].count())/total_size*100\n",
         "\n",
         "df_analysis.head()"
       ],
       "metadata": {
         "id": "RL2MJzAFV4ru",
-        "outputId": "61ebaf4b-cfa4-4b0f-cd56-864b61bbd105",
+        "outputId": "cc7f01cb-53e6-436d-c2a7-a964e62ef71a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
         }
       },
-      "execution_count": 214,
+      "execution_count": 233,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "          baseline_model  final_model\n",
-              "Error(%)                             \n",
-              "1                      0            0\n",
-              "5                      0            0\n",
-              "10                     0            0\n",
-              "20                     0            0\n",
-              "30                     0            0"
+              "error(%)                             \n",
+              "1                    3.4          9.2\n",
+              "5                   11.6         32.1\n",
+              "10                  13.6         27.1\n",
+              "20                  26.5         25.0\n",
+              "30                  17.6          5.1"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ffcac5f7-0c73-413d-8eac-614ab92eb46e\">\n",
+              "  <div id=\"df-ebad4a2c-7067-449c-8e98-a122fd7b5920\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -5524,7 +5538,7 @@
               "      <th>final_model</th>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>Error(%)</th>\n",
+              "      <th>error(%)</th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "    </tr>\n",
@@ -5532,33 +5546,33 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>3.4</td>\n",
+              "      <td>9.2</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>11.6</td>\n",
+              "      <td>32.1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>10</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>13.6</td>\n",
+              "      <td>27.1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>20</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>26.5</td>\n",
+              "      <td>25.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>30</th>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>17.6</td>\n",
+              "      <td>5.1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ffcac5f7-0c73-413d-8eac-614ab92eb46e')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ebad4a2c-7067-449c-8e98-a122fd7b5920')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -5609,12 +5623,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-ffcac5f7-0c73-413d-8eac-614ab92eb46e button.colab-df-convert');\n",
+              "          document.querySelector('#df-ebad4a2c-7067-449c-8e98-a122fd7b5920 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-ffcac5f7-0c73-413d-8eac-614ab92eb46e');\n",
+              "          const element = document.querySelector('#df-ebad4a2c-7067-449c-8e98-a122fd7b5920');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -5637,7 +5651,68 @@
             ]
           },
           "metadata": {},
-          "execution_count": 214
+          "execution_count": 233
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_table[\"final_error(%)\"].describe()"
+      ],
+      "metadata": {
+        "id": "FuPfSiR13YQ6",
+        "outputId": "030b8661-5bef-42cb-8623-54dfe30700e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 229,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count   2128.0\n",
+              "mean       8.3\n",
+              "std        7.9\n",
+              "min        0.0\n",
+              "25%        2.9\n",
+              "50%        6.4\n",
+              "75%       11.7\n",
+              "max      146.5\n",
+              "Name: final_error(%), dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 229
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_size = len(df_table)\n",
+        "total_size"
+      ],
+      "metadata": {
+        "id": "EQTgAYp92G_0",
+        "outputId": "a923c4dc-4ea8-4770-fe40-38224fc5e888",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 222,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2128"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 222
         }
       ]
     },
